Remove img tag, convert to md img syntax

--- a/_posts/2013-09-06-crescent.md
+++ b/_posts/2013-09-06-crescent.md
@@ -30,4 +30,4 @@ Both arcs have the `sweep-flag` fixed to 1, though you can of course change this
 This image, from [w3.org](http://www.w3.org/TR/SVG/paths.html#PathDataEllipticalArcCommands) illustrates how the sweep and arc flags
 affect the appearance the arcs.
 
-<img src="/images/arc-paths.svg" alt="" style='background:url(/images/graph-paper/graph-paper-small.png)'>
+![Sweep and Arc Flags demo](/images/arc-paths.svg)
