--- a/_posts/2013-09-08-sector.md
+++ b/_posts/2013-09-08-sector.md
@@ -4,7 +4,7 @@ title: Sector
 name: sector
 ---
 
-The sector, a.k.a *Pac-Man* shape, is another shape that makes use of SVG's excellent arc command.
+The sector, which looks extremely similar to Pac-Man, is another shape that makes use of SVG's excellent arc command.
 
 {% highlight html %}
 <svg width='400px' height='400px'>
@@ -16,15 +16,18 @@ The path data can be broken into the following chunks:
 
 * `M200,200` moves the pointer to the middle of the sector
 * `L338,120` draws a line from the center to the point where the arc will begin
-* `A160,160 0 1,0 338,280` draws a circular arc of radius `160` round to the opposite side from where the arc began
+* `A160,160 0 1,0 338,280` draws a circular arc of radius `160` all the way round to the opposite side
+from where the arc originally began
 * `Z` draws a straight line back to the center
 
-We can use trigonometry to find where the arc needs to start from and end. By The `x,y` coordinates
-of the start point can be calculated with the following formula:
+We can use trigonometry to find the exact coodinates of the start and end points of the arc. If
+`cx,cy` indicate the center of the sector, and `angle` is the size of the Pac-Man's mouth (in radians), then
+the coordinates can be calculated with the following equations:
 
-`cx + (radius*Math.cos(angle/2)), cy - (radius*Math.sin(angle/2)`
+{% highlight js %}
+arcStart = cx + (radius*Math.cos(angle/2)), cy - (radius*Math.sin(angle/2);
+arcEnd = cx + (radius*Math.cos(angle/2)), cy + (radius*Math.sin(angle/2);
+{% endhighlight %}
 
-where `cx,cy` indicated the center of the sector, and `angle` is the size of the Pac-Man's mouth, in radians.
-The arc ends at the point directly opposite the above:
-
-`cx + (radius*Math.cos(angle/2)), cy + (radius*Math.sin(angle/2)`
+The only other caveat of which you should be aware is that we need to implement a conditional to make sure that
+the `large-arc-flag` is set to `1` only if the angle is greater than 180&deg;.
