Remove link to arbelos page

--- a/_posts/2013-09-07-salinon.md
+++ b/_posts/2013-09-07-salinon.md
@@ -8,7 +8,7 @@ The salinon, a shape first studied by Archimedes, is made from four semicircles.
 and have diameters of `dOuter` and `dInner` respectively, are connected to each other by two other semicircles which are equal in size. The diameter
 of each of these twin semicircles must be `(dOuter-dInner)/2`.
 
-Like the [crescent]({% post_url 2013-09-06-crescent %}) and [arbelos]({% post_url 2013-09-06-arbelos %}), the SVG path data for a salinon is made entirely from circular arcs,
+Like the [crescent]({% post_url 2013-09-06-crescent %}), the SVG path data for a salinon is made entirely from circular arcs,
 in this case, four are needed.
 
 {% highlight html %}
